codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__timed_process_wait_countdown.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
assertion_line: 128
expression: waiting
---
• Waiting for timed process result (1m 00s left • esc to interrupt) · 1 background terminal running…
  └ Timed · cargo fmt --check · process p3 · wait w3


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
