codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__timed_process_wait_elapsed_history.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
expression: completed
---
• Waited 1m 00s · timed wait ended · cargo fmt --check (process p3; wait w3)
