codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_completed_session_poll.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
$ gh run watch 29332067759
✓ • 5ms
• Checked background terminal output · gh run watch 29332067759
