codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_initial_status_shows_command.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1658
expression: normalize_snapshot_paths(rendered)
---
• Working (1m 00s left • esc to interrupt) · 1 background terminal running · /p…
  └ sleep 60


› Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
